cmake_minimum_required(VERSION 3.10)
project(cuda-nlmeans LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

find_package(OpenMP REQUIRED)
find_package(OpenCV REQUIRED)
find_package(CUDA)
include_directories(${OpenCV_INCLUDE_DIRS})

add_executable(cuda-nlmeans main.cpp utilities.cpp utilities.cu utilities.h)
target_link_libraries(cuda-nlmeans PRIVATE ${OpenCV_LIBRARIES})
target_link_libraries(cuda-nlmeans PRIVATE OpenMP::OpenMP_CXX)
if (CUDA_FOUND)
    add_definitions(-DUSE_CUDA)
    enable_language(CUDA)
    set_target_properties(cuda-nlmeans PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
else()
    add_definitions(-DNO_CUDA)
endif()