cmake_minimum_required(VERSION 3.23)
project(cuda-nlmeans LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

find_package(OpenMP REQUIRED)
find_package(OpenCV REQUIRED)
find_package(CUDAToolkit REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})

add_executable(${PROJECT_NAME} main.cpp utilities.cpp utilities.cu utilities.h)
target_link_libraries(${PROJECT_NAME} PRIVATE ${OpenCV_LIBRARIES})
target_link_libraries(${PROJECT_NAME} PRIVATE OpenMP::OpenMP_CXX)
if (CUDAToolkit_FOUND)
    message(STATUS "Cuda Toolkit Version: ${CUDAToolkit_VERSION}")
    add_definitions(-DUSE_CUDA)
    enable_language(CUDA)
    target_link_libraries(${PROJECT_NAME} PRIVATE CUDA::cudart)
    set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_ARCHITECTURES "all")
    set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
else()
    add_definitions(-DNO_CUDA)
endif()